--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,4 +29,4 @@ uses: lowlighter/metrics@latest
     plugin_languages_indepth: no                                  # Get indepth stats (see documentation before enabling)
     plugin_languages_recent_load: 500                             # Load up to 500 events to compute recently used stats
     plugin_languages_recent_days: 7                               # Limit recently used stats to last week
-    commits_authoring: lowlighter@users.noreply.github.com        # Surnames or email addresses used to identify your commits
+    commits_authoring: efeumutaslan@users.noreply.github.com        # Surnames or email addresses used to identify your commits
