--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -34,5 +34,5 @@ jobs:
           plugin_languages_threshold: 0%
           plugin_music: yes
           plugin_music_limit: 4                   # Limit to 4 entries
-          plugin_music_playlist: <iframe src="https://open.spotify.com/embed/playlist/5Rmv7LHca4P4bZJLSeGy1l" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          plugin_music_playlist: https://open.spotify.com/playlist/5Rmv7LHca4P4bZJLSeGy1l?si=1d066afc0f2d4be6
                                                #   (plugin_music_provider and plugin_music_mode will be set automatically)
